--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
